--- a/Canvas.html
+++ b/Canvas.html
@@ -8,6 +8,6 @@
 			<canvas id="CANVAS" style="align:center;border:5px solid #FFFFFF;" width="640" height="400">
 			</canvas>
 		</div>
-		<script src="Map.js"></script>
+		<script src="Game.js"></script>
 	</body>
 </html>
