got the engine to run, and generate a map

--- a/Canvas.html
+++ b/Canvas.html
@@ -3,11 +3,14 @@
 		<meta charset="utf-8"/>
 		<title>Canvas</title>
 	</head>
-	<body bgcolor="#000000">
+	<body bgcolor="#696969">
 		<div align="center" style="margin-top:100px">
-			<canvas id="CANVAS" style="align:center;border:5px solid #FFFFFF;" width="640" height="400">
+			<canvas id="CANVAS" style="align:center;border:5px solid #BABABA;" width="1280" height="800">
 			</canvas>
 		</div>
-		<script src="Game.js"></script>
+		<script src="Input.js"></script>
+		<script src="Map.js"></script>
+		<script src="Generator.js"></script>
+		<script src="Application.js"></script>
 	</body>
 </html>
