Added Entitys written by Razmin to the application

--- a/Canvas.html
+++ b/Canvas.html
@@ -10,6 +10,9 @@
 		</div>
 		<script src="Input.js"></script>
 		<script src="Map.js"></script>
+		<script src="Entity.js"></script>
+		<script src="PlayerEntity.js"></script>
+		<script src="GoalEntity.js"></script>
 		<script src="Generator.js"></script>
 		<script src="Application.js"></script>
 	</body>
