Some finishing touches, mostly by Raz

--- a/Canvas.html
+++ b/Canvas.html
@@ -2,11 +2,14 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Canvas</title>
+		<script src="http://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script>
 	</head>
 	<body bgcolor="#696969">
 		<div align="center" style="margin-top:100px">
-			<canvas id="CANVAS" style="align:center;border:5px solid #BABABA;" width="1280" height="800">
+			<canvas id="CANVAS" style="align:center;border:5px solid #BABABA;" width="860" height="624">
 			</canvas>
+			<p style="font-family:Arial;align:center;color:#BABABA;">The goal of the game is to get to the star.</p>
+			<p style="font-family:Arial;align:center;color:#BABABA;">If you're having trouble, you can refresh the page</p>
 		</div>
 		<script src="Input.js"></script>
 		<script src="Map.js"></script>
